# my-weather

./: Cargo.toml  readme.md
my-weather/: Cargo.toml
my-weather-gui/: Cargo.toml  readme.md
my-weather-gui/src/: error_dialog.rs  handlers.rs  header_menu.rs  lib.rs  main.rs  parsers.rs  style.css  style_mac.css  types.rs  widgets.rs
my-weather-gui/src/components/: app.rs  error_dialog.rs  forecast_factory.rs  header_menu.rs  mod.rs  refresh_worker.rs
my-weather/src/: lib.rs  main.rs  parsers.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  parsers.rs  types.rs
tauri-weather/: package-lock.json  package.json
tauri-weather/src/: App.css  App.tsx  index.css
tauri-weather/src/common/: types.ts
tauri-weather/src/components/FutureForecast/: Forecast.module.css  Forecast.tsx
tauri-weather/src/components/Tooltip/: Tooltip.module.css  Tooltip.tsx
