[package]
name = "my-weather-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4", package = "gtk4" }
relm4 = "0.4"
relm4-macros = "0.4"
relm4-components = "0.4"
my-weather = { path = "../my-weather", features = ["async"] }
tokio = { version = "1" }
chrono = "0.4"
