[package]
name = "my-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.6"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", optional = true }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"], optional = true }
nom = "7.1"

[features]
default = ["reqwest/blocking"]
async = ["dep:tokio", "reqwest"]
